--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "local": "^0.3.3",
     "mongoose": "^5.6.7",
     "morgan": "^1.9.0",
+    "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
